[gd_scene load_steps=12 format=3 uid="uid://f50562tvd0fg"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_en5rn"]
[ext_resource type="Texture2D" uid="uid://1jwjdru4mr77" path="res://art/background-Sheet.png" id="1_voun7"]
[ext_resource type="Texture2D" uid="uid://cmwuerw025oyi" path="res://art/title.png" id="2_f8dbv"]
[ext_resource type="StyleBox" uid="uid://bl66n67jhoalj" path="res://themes/brownerPanel.tres" id="4_2x1iy"]
[ext_resource type="StyleBox" uid="uid://d3uq7rkajrtph" path="res://themes/brownPanel.tres" id="5_kikrd"]
[ext_resource type="AudioStream" uid="uid://c7wr6e6ra5e2a" path="res://art/keyClick.wav" id="6_v1hxt"]
[ext_resource type="AudioStream" uid="uid://dflguyq1n6hi7" path="res://art/crowdNoise.wav" id="7_taxwc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kp3j0"]
atlas = ExtResource("1_voun7")
region = Rect2(0, 0, 1152, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr8p3"]
atlas = ExtResource("1_voun7")
region = Rect2(1152, 0, 1152, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjut6"]
atlas = ExtResource("1_voun7")
region = Rect2(2304, 0, 1152, 350)

[sub_resource type="SpriteFrames" id="SpriteFrames_8mfts"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp3j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr8p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjut6")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_en5rn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 176)
sprite_frames = SubResource("SpriteFrames_8mfts")
frame_progress = 0.954695

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(544, 176)
texture = ExtResource("2_f8dbv")

[node name="MenuOptions" type="Panel" parent="."]
layout_mode = 0
offset_top = 351.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = ExtResource("4_2x1iy")

[node name="Play" type="Button" parent="MenuOptions"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 57.0
offset_right = 64.0
offset_bottom = 110.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_kikrd")
theme_override_styles/hover = ExtResource("4_2x1iy")
theme_override_styles/pressed = ExtResource("5_kikrd")
text = "Play"

[node name="HowToPlay" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 448.0
offset_top = 129.0
offset_right = 704.0
offset_bottom = 182.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_kikrd")
theme_override_styles/hover = ExtResource("4_2x1iy")
theme_override_styles/pressed = ExtResource("5_kikrd")
text = "How To Play"

[node name="Quit" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 512.0
offset_top = 200.0
offset_right = 640.0
offset_bottom = 253.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_kikrd")
theme_override_styles/hover = ExtResource("4_2x1iy")
theme_override_styles/pressed = ExtResource("5_kikrd")
text = "Quit"

[node name="How To Play" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -226.0
offset_right = 312.0
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_kikrd")

[node name="Label" type="RichTextLabel" parent="How To Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -215.5
offset_right = 252.0
offset_bottom = 215.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
bbcode_enabled = true
text = "[b]How To Play:[/b]

	You will be presented with a spell sequence that requires you to match the sequence exactly. 
	Each sequence will contain either W A S D, that you must match in the correct sequence with your keyboard in order to attack.
	The spell sequence will only change when you match the sequence correctly.
	Each player attack does 25 damage to the enemy
	Each enemy attack does 10 damage

[b]Score :[/b]
		25 pts per hit on enemy
		75 pts per enemy beaten
		-100 pts per hit on player"
scroll_active = false

[node name="close" type="Button" parent="How To Play"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.377
anchor_top = 0.914
anchor_right = 0.478
anchor_bottom = 0.914
offset_left = -0.104004
offset_top = -16.042
offset_right = 16.144
offset_bottom = 19.958
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("5_kikrd")
theme_override_styles/hover = ExtResource("5_kikrd")
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 936.0
offset_top = 616.0
offset_right = 1140.0
offset_bottom = 639.0
text = "Created by: Nick Chernock"

[node name="keyClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_v1hxt")

[node name="crowd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_taxwc")

[connection signal="pressed" from="MenuOptions/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuOptions/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MenuOptions/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="How To Play/close" to="." method="_on_close_pressed"]
